@@ -591,10 +591,14 @@ static GtkWidget *volumealsa_configure(LXPanel *panel, GtkWidget *p)
     VolumeALSAPlugin * vol = lxpanel_plugin_get_data(p);
     char *path = NULL;
     const gchar *command_line = NULL;
+    GAppInfoCreateFlags flags = G_APP_INFO_CREATE_NONE;
 
     /* FIXME: configure settings! */
     /* check if command line was configured */
     config_setting_lookup_string(vol->settings, "MixerCommand", &command_line);
+    /* FIXME: support "needs terminal" for MixerCommand */
+    /* FIXME: selection for master channel! */
+    /* FIXME: configure buttons for each action (toggle volume/mixer/mute)! */
 
     /* if command isn't set in settings then let guess it */
     if (command_line == NULL && (path = g_find_program_in_path("pulseaudio")))
@@ -624,19 +628,15 @@ static GtkWidget *volumealsa_configure(LXPanel *panel, GtkWidget *p)
         }
         else if ((path = g_find_program_in_path("alsamixer")))
         {
-            g_free(path);
-            if ((path = g_find_program_in_path("xterm")))
-            {
-                command_line = "xterm -e alsamixer";
-            }
+            command_line = "alsamixer";
+            flags = G_APP_INFO_CREATE_NEEDS_TERMINAL;
         }
     }
     g_free(path);
 
     if (command_line)
     {
-        fm_launch_command_simple(NULL, NULL, G_APP_INFO_CREATE_NONE,
-                                 command_line, NULL);
+        fm_launch_command_simple(NULL, NULL, flags, command_line, NULL);
     }
     else
     {
